--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Titulo;
-  src: url(/fontes/ANODETONOONE.TTF);
+  src: url(./fontes/ANODETONOONE.TTF);
 }
 
 h1 {
@@ -10,7 +10,7 @@ h1 {
 }
 
 body {
-  background-image: url(../imgs/fundo.jpg);
+  background-image: url(./imgs/fundo.jpg);
 }
 
 #explosao1 {
@@ -35,7 +35,7 @@ body {
   width: 50px;
   height: 8px;
   position: absolute;
-  background-image: url(../imgs/disparo.png);
+  background-image: url(./imgs/disparo.png);
 }
 
 #container {
@@ -49,7 +49,7 @@ body {
 #fundoGame {
   width: 950px;
   height: 630px;
-  background-image: url(../imgs/fundo_game.jpg);
+  background-image: url(./imgs/fundo_game.jpg);
   border-color: #fff;
   border-style: solid;
 }
@@ -60,7 +60,7 @@ body {
   position: absolute;
   left: 8px;
   top: 179px;
-  background-image: url(../imgs/apache.png);
+  background-image: url(./imgs/apache.png);
 }
 
 #inimigo1 {
@@ -69,7 +69,7 @@ body {
   position: absolute;
   left: 689px;
   top: 253px;
-  background-image: url(../imgs/inimigo1.png);
+  background-image: url(./imgs/inimigo1.png);
 }
 
 #inimigo2 {
@@ -78,7 +78,7 @@ body {
   position: absolute;
   left: 775px;
   top: 447px;
-  background-image: url(../imgs/inimigo2.png);
+  background-image: url(./imgs/inimigo2.png);
 }
 
 #amigo {
@@ -87,7 +87,7 @@ body {
   position: absolute;
   left: 10px;
   top: 464px;
-  background-image: url(../imgs/amigo.png);
+  background-image: url(./imgs/amigo.png);
 }
 
 #inicio {
@@ -102,7 +102,7 @@ body {
 }
 
 .anima1 {
-  background-image: url(../imgs/helicoptero.png);
+  background-image: url(./imgs/helicoptero.png);
   animation: play 0.2s steps(2) infinite;
 
   -webkit-animation: play 0.2s steps(2) infinite;
